feat: chat init endpoint
