# docs/swagger.json
@@ -79,6 +79,49 @@
         }
       }
     },
+    "/init": {
+      "post": {
+        "tags": [
+          "Chat"
+        ],
+        "summary": "Start talking to AI bot",
+        "operationId": "chat-init",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "account_address": {
+                    "type": "string"
+                  },
+                  "message": {
+                    "type": "string"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ChatResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request",
+            "content": {}
+          }
+        }
+      }
+    },
     "/contract/analyze": {
       "post": {
         "tags": [
