# src/routes.ts
@@ -8,6 +8,7 @@ const router = Router();
 const analyzeController = new ContractAnalysis();
 
 router.post('/chat', chatValidator, analyzeController.chat);
+router.post('/init', chatValidator, analyzeController.chatInit);
 router.post('/contract/analyze', contractAndChain, analyzeController.contractAnalysis);
 router.post('/contract/info', contractAndChain, analyzeController.contractInfo);
 router.post('/transaction/analyze', transaction, analyzeController.transactionAnalysis);
